# Spalling-Segmentation

./: .gitignore  README.md  checkpoints  pyproject.toml  requirements.txt
configs/_base_/datasets/: spalling.py
configs/clean/: convnext-large_upernet_40k_clean.py
configs/convnext/: convnext-large_upernet_40k_spalling-512x512.py
configs/ft_damseg/: ft-n10.py  ft-n100.py  ft-n200.py  ft-n25.py  ft-n50.py
configs/lodo/: convnext-large_upernet_40k_lodo-cubit.py  convnext-large_upernet_40k_lodo-damseg.py  convnext-large_upernet_40k_lodo-hrcds.py
configs/mask2former/: mask2former_swin-b_40k_spalling-512x512.py
configs/swin/: swin-large_upernet_40k_spalling-512x512.py
mmseg/datasets/: spalling.py
results/: BASELINE_DIAGNOSIS.md  metrics_convnext-l.txt  metrics_swin-b.txt  metrics_swin-l.txt
results/clean/: metrics_clean.txt
results/failure/: summary_cubit.txt  summary_damseg.txt  summary_hrcds.txt
results/ft_curve/: metrics_n0.txt  metrics_n10.txt  metrics_n100.txt  metrics_n200.txt  metrics_n25.txt  metrics_n50.txt
results/lodo/: metrics_cubit.txt  metrics_damseg.txt  metrics_hrcds.txt
results/threshold/: sweep_baseline.txt
spalling_seg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
spalling_seg/datasets/: __init__.py  spalling.py
tools/: auto_train_spalling.sh  build_ft_curve.py  build_lodo_folds.py  build_spalling_dataset.py  eval_negatives.py  eval_per_dataset.py  failure_analysis.py  inference_spalling.py  run_analysis_34.sh  run_clean.sh  run_ft_curve.sh  run_lodo.sh  run_lodo_cubit.sh  threshold_sweep.py
