[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spalling-seg"
version = "0.1.0"
description = "Binary spalling segmentation (CUBIT_Seg + DamSeg + HRCDS) built on mmsegmentation"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["spalling_seg", "spalling_seg.datasets"]
